# Kursach_QT

./: .gitignore  CMakeLists.txt  DatabaseManager.cpp  MainWindow.cpp  MainWindow.ui
